--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
         class="robot-3d"
         url="https://prod.spline.design/H-IAEu3DyUOBopS0/scene.splinecode"
       ></spline-viewer>
+
+      <footer class="footer">
+        <p>&copy; 2025 NERO®TECHNOLOGIES</p>
+      </footer>
     </div>
     <script
       type="module"
