--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="cursor"></div>
-    <img src="/gradient.png" alt="gradient" class="image-gradient" />
+    <img src="gradient.png" alt="gradient" class="image-gradient" />
     <div class="layer-blue"></div>
     <div class="content">
       <header>
@@ -105,7 +105,7 @@
       src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"
     ></script>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
