Improved HTML structure and added icons... V.2

--- a/index.html
+++ b/index.html
@@ -6,24 +6,53 @@
     <title>NERO®TECHNOLOGIES</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link
+      rel="icon"
+      type="./image/png"
+      href="./picture/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="./picture/favicon.svg" />
+    <link rel="shortcut icon" href="./picture/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./picture/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="./picture/site.webmanifest" />
   </head>
   <body>
     <div class="cursor"></div>
     <img src="./gradient.png" alt="." class="image-gradient" />
     <div class="layer-blue"></div>
-    <div class="content">
+    <section class="content">
       <header>
         <h1 data-aos="fade-down" data-aos-duration="1500" class="logo">
           NERO®TECHNOLOGIES
         </h1>
-
-        <nav>
-          <a data-aos="fade-down" data-aos-duration="1500" href="#">COMPANY</a>
-          <a data-aos="fade-down" data-aos-duration="2000" href="#">FEATURES</a>
-          <a data-aos="fade-down" data-aos-duration="2500" href="#"
-            >RESOURCES</a
-          >
-          <a data-aos="fade-down" data-aos-duration="3000" href="#">DOCS</a>
+        <nav data-aos="fade-down" data-aos-duration="1500">
+          <ul data-aos="fade-down" data-aos-duration="1500" class="nav-list">
+            <li>
+              <a data-aos="fade-down" data-aos-duration="1500" href="#"
+                >COMPANY</a
+              >
+            </li>
+            <li>
+              <a data-aos="fade-down" data-aos-duration="2000" href="#"
+                >SOLUTIONS</a
+              >
+            </li>
+            <li>
+              <a data-aos="fade-down" data-aos-duration="2500" href="#"
+                >PARTNESRS</a
+              >
+            </li>
+            <li>
+              <a data-aos="fade-down" data-aos-duration="3000" href="#"
+                >CONTACT US</a
+              >
+            </li>
+          </ul>
         </nav>
 
         <button
@@ -47,7 +76,7 @@
             data-aos-duration="1500"
             class="tag-box"
           >
-            <div class="tag">INTRUCING &wedbar;</div>
+            <div class="tag">INTRUCING</div>
           </div>
           <h1
             data-aos="fade-zoom-in"
@@ -68,7 +97,7 @@
             data-aos-duration="2500"
             class="description"
           >
-            the best way to protect you in CYBERWORD
+            TEXT
           </p>
           <div
             data-aos="fade-zoom-in"
@@ -79,31 +108,29 @@
             data-aos-duration="3000"
             class="buttons"
           >
-            <a href="#" class="btn-get-started">Documentation &gt;</a>
             <a href="#" class="btn-signing-main">GetStarted &gt;</a>
           </div>
         </div>
       </main>
-
+      <script
+        type="module"
+        src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"
+      ></script>
       <spline-viewer
         data-aos="fade-zoom-in"
         data-aos-easing="ease-in-back"
         data-aos-delay="300"
         data-aos-offset="0"
         data-aos="fade-down"
-        data-aos-duration="3000"
+        data-aos-duration="2500"
         class="robot-3d"
-        url="https://prod.spline.design/H-IAEu3DyUOBopS0/scene.splinecode"
+        url="https://prod.spline.design/BCQgGZJs5M3OI-KJ/scene.splinecode"
       ></spline-viewer>
 
       <footer class="footer">
         <p>&copy; 2025 NERO®TECHNOLOGIES</p>
       </footer>
-    </div>
-    <script
-      type="module"
-      src="https://unpkg.com/@splinetool/viewer@1.9.82/build/spline-viewer.js"
-    ></script>
+    </section>
 
     <script src="./script.js" defer></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
