--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NERO®TECHNOLOGIES</title>
+    <title>NERO TECHNOLOGIES®</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
@@ -133,7 +133,7 @@
       <h2>WE CREATE</h2>
     </section>
     <footer class="footer">
-      <p>&copy; 2025 NERO®TECHNOLOGIES</p>
+      <p>&copy; 2025 NERO TECHNOLOGIES®</p>
     </footer>
     <div class="bacg-2"></div>
     <script src="./script.js" defer></script>
