--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="content">
       <header>
         <h1 data-aos="fade-down" data-aos-duration="1500" class="logo">
-          NERO®TECHNOLOGIES
+          NERO TECHNOLOGIES®
         </h1>
         <nav data-aos="fade-down" data-aos-duration="1500">
           <ul data-aos="fade-down" data-aos-duration="1500" class="nav-list">
