--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </li>
             <li>
               <a data-aos="fade-down" data-aos-duration="2500" href="#"
-                >PARTNESRS</a
+                >PARTNERS</a
               >
             </li>
             <li>
@@ -76,7 +76,7 @@
             data-aos-duration="1500"
             class="tag-box"
           >
-            <div class="tag">INTRUCING</div>
+            <div class="tag">INTRODUCING</div>
           </div>
           <h1
             data-aos="fade-zoom-in"
