--- a/index.html
+++ b/index.html
@@ -27,30 +27,22 @@
     <div class="layer-blue"></div>
     <section class="content">
       <header>
-        <h1 data-aos="fade-down" data-aos-duration="1500" class="logo">
+        <h1 data-aos="fade-down" data-aos-duration="1200" class="logo">
           NERO TECHNOLOGIES®
         </h1>
         <nav data-aos="fade-down" data-aos-duration="1500">
-          <ul data-aos="fade-down" data-aos-duration="1500" class="nav-list">
+          <ul class="nav-list">
             <li>
-              <a data-aos="fade-down" data-aos-duration="1500" href="#"
-                >COMPANY</a
-              >
+              <a>COMPANY</a>
             </li>
             <li>
-              <a data-aos="fade-down" data-aos-duration="2000" href="#"
-                >SOLUTIONS</a
-              >
+              <a>SOLUTIONS</a>
             </li>
             <li>
-              <a data-aos="fade-down" data-aos-duration="2500" href="#"
-                >PARTNERS</a
-              >
+              <a>PARTNERS</a>
             </li>
             <li>
-              <a data-aos="fade-down" data-aos-duration="3000" href="#"
-                >CONTACT US</a
-              >
+              <a>CONTACT US</a>
             </li>
           </ul>
         </nav>
@@ -73,7 +65,7 @@
             data-aos-delay="300"
             data-aos-offset="0"
             data-aos="fade-down"
-            data-aos-duration="1500"
+            data-aos-duration="1300"
             class="tag-box"
           >
             <div class="tag">INTRODUCING</div>
@@ -84,7 +76,7 @@
             data-aos-delay="300"
             data-aos-offset="0"
             data-aos="fade-down"
-            data-aos-duration="2000"
+            data-aos-duration="1500"
           >
             EMAIL FOR <br />DEVELOPERS
           </h1>
@@ -94,7 +86,7 @@
             data-aos-delay="300"
             data-aos-offset="0"
             data-aos="fade-down"
-            data-aos-duration="2500"
+            data-aos-duration="1500"
             class="description"
           >
             TEXT
@@ -105,7 +97,7 @@
             data-aos-delay="300"
             data-aos-offset="0"
             data-aos="fade-down"
-            data-aos-duration="3000"
+            data-aos-duration="1700"
             class="buttons"
           >
             <a href="#" class="btn-signing-main">GetStarted &gt;</a>
@@ -123,7 +115,7 @@
           data-aos-delay="300"
           data-aos-offset="0"
           data-aos="fade-down"
-          data-aos-duration="2500"
+          data-aos-duration="1000"
           class="robot-3d"
           url="https://prod.spline.design/BCQgGZJs5M3OI-KJ/scene.splinecode"
         ></spline-viewer>
